# dragonseeker

./: .dockerignore  CLAUDE.md  Dockerfile  README.md
.do/: app.yaml
app/: Cargo.toml  app.py  pyproject.toml
app/.cargo/: config.toml
app/core/: constants.py  game_manager.py  game_session.py  player.py  roles.py
app/models/: requests.py  responses.py
app/routes/: game.py  gameplay.py  lobby.py  websocket.py
app/services/: game_state.py  voting.py  win_conditions.py
app/src/: lib.rs  main.rs  state.rs
app/src/auth/: middleware.rs  mod.rs  token.rs
app/src/core/: constants.rs  game_manager.rs  game_session.rs  mod.rs  player.rs  roles.rs
app/src/middleware/: mod.rs  rate_limiter.rs  security_headers.rs
app/src/models/: mod.rs  requests.rs  responses.rs
app/src/routes/: game.rs  gameplay.rs  health.rs  lobby.rs  mod.rs  websocket.rs
app/src/services/: game_state.rs  mod.rs  voting.rs  win_conditions.rs
app/static/css/: custom.css
app/static/js/: htmx-config.js  security.js  websocket-client.js
app/templates/: base.html  game.html  index.html  join.html  lobby.html  lobby_simple.html  results.html  test.html
app/tests/: __init__.py  conftest.py  integration_tests.rs  role_assignment_integration_test.rs  template_rendering_tests.rs  websocket_broadcast_tests.rs
app/tests/services/: __init__.py  test_game_state.py  test_voting.py  test_win_conditions.py
