[project]
name = "dragonseeker"
version = "0.1.0"
description = "Dragonseeker - A social deduction party game"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]~=0.118.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
    "ty>=0.0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async - checks for async best practices and proper cleanup
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"